Adding argument # function

--- a/proj3a/proj3a/README
+++ b/proj3a/proj3a/README
@@ -2,6 +2,12 @@ NAME: Stewart Dulaney
 EMAIL: sdulaney@ucla.edu
 ID: 904-064-791
 
+NAME: Pariya Samandi
+EMAIL: pari.samandi@gmail.com
+ID: 205-092-357
+
+
+
 Included files:
 
 lab3a.c:
